@@ -1576,6 +1576,8 @@ func TestGetFlags(t *testing.T) {
 	 * fmcsadmin --fqdn example.jp -u USERNAME set cwpconfig enablephp=true usefmphp=true
 	 * fmcsadmin --fqdn example.jp -u USERNAME -p PASSWORD set cwpconfig enablephp=true usefmphp=true
 	 * fmcsadmin set serverprefs maxguests=125 maxfiles=125
+	 * fmcsadmin set serverprefs AuthenticatedStream=1
+	 * fmcsadmin set serverprefs AuthenticatedStream=2
 	 * fmcsadmin --fqdn example.jp set serverconfig hostedfiles=125 scriptsessions=100
 	 * fmcsadmin --fqdn example.jp -u USERNAME set serverconfig hostedfiles=125 scriptsessions=100
 	 * fmcsadmin --fqdn example.jp -u USERNAME -p PASSWORD set serverconfig hostedfiles=125 scriptsessions=100
